dyntopo crash #120400
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#120400
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: win 11 pro version 10.0.22631 build 22631
Graphics card: rtx 2060 super / ryzen 5 3600
Blender Version
Broken Version: 4.1.1
Short description of error
dyntopo cause crash when enabling
Exact steps for others to reproduce the error
Thank you for the report.
To help us investigate the issue, could you please provide more details on how to replicate the crash?
Haven't tested in other projects as I'm only doing one. The last time it crashed was when I was sculpting ears and switched to dyntopo and it doesn't happen all the time, every once in a while. I am using blender via steam btw.
We had some corrections in the sculpt area.
It would be nice if you could check if this problem has already been potentially fixed in version 4.1.1
https://builder.blender.org/download/
Steam and other platforms have not yet made this version available.
Checked in version 4.1.1 also crashes.
Thank you for testing the issue.
I was able to reproduce the crash on Blender 4.1.1 and added steps for others to reproduce the issue.
I can confirm the issue and will forward it to the developers for further investigation.
thanks
Caused by
b3aca5b28f
@HooglyBoogly ^
Bug is this line inside
sculpt_attr_update
:Caused by the change that @mano-wii pointed out in
build_pbvh_for_dynamic_topology
wheresculptsession_bmesh_add_layers(ob);
expects a PBVH to exist in a later function call.Should have a fix for this shortlyEdit: Simple fix isn't so simple due to some interdependencies in this area, will take a bit longer to make a fix for this